--- a/project/res/values-da/strings.xml
+++ b/project/res/values-da/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Søg efter destinationer, seværdigheder og adresser</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Søg efter destinationer…</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Søg efter afrejsested…</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">Til %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">Fra %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">Et sted i den store, vide verden</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Kun dig</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Indtast dine rejsedatoer nedenfor.</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Enkeltbilletter til flyrejser og ophold med én overnatning.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Returbilletter til flyrejser og ophold med %s overnatninger.</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Startdato: %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Slutdato: (valgfrit)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Slutdato: %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">%s forrige måned</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">%s nuværende måned</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">%s næste måned</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">Dag %1$s, %2$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">%s i rejsen</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">%s startdato</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">%s slutdato</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">%s kan ikke vælges</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">resultater</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Sorter og filtrer</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Afslut</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">Hoteller i %s</item>
+        <item quantity="one">Hotel i %s</item>
+        <item quantity="two">Hoteller i %s</item>
+        <item quantity="few">Hoteller i %s</item>
+        <item quantity="many">Hoteller i %s</item>
+        <item quantity="other">Hoteller i %s</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s af %2$s hoteller</item>
+        <item quantity="one">%1$s af %2$s hotel</item>
+        <item quantity="two">%1$s af %2$s hoteller</item>
+        <item quantity="few">%1$s af %2$s hoteller</item>
+        <item quantity="many">%1$s af %2$s hoteller</item>
+        <item quantity="other">%1$s af %2$s hoteller</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">af %s hoteller</item>
+        <item quantity="one">af %s hotel</item>
+        <item quantity="two">af %s hoteller</item>
+        <item quantity="few">af %s hoteller</item>
+        <item quantity="many">af %s hoteller</item>
+        <item quantity="other">af %s hoteller</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s fly</item>
+        <item quantity="one">%s fly</item>
+        <item quantity="two">%s fly</item>
+        <item quantity="few">%s fly</item>
+        <item quantity="many">%s fly</item>
+        <item quantity="other">%s fly</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Rejse til</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Fly til %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Hoteller i %1$s</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Sortér efter</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Filtre</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Områder</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Andre områder</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">populær</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">pris</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">antal stjerner</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">afstand</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Tryk for at søge efter de mest populære hoteller.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Tryk for at søge efter de billigste hoteller.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Tryk for at søge efter hoteller med flest stjerner.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Tryk for at søge efter hoteller i nærheden.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">Fra %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Flypræferencer</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Antal stop</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Flyselskaber</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">Hej &lt;b&gt;%1$s&lt;/b&gt;, det ser ud til, at vi har fundet din Expedia-konto! Indtast venligst din adgangskode til Expedia nedenfor for at forbinde din facebook-konto og din Expedia-konto.</string>
