--- a/project/res/values-de/strings.xml
+++ b/project/res/values-de/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Nach Reiseziel, Sehenswürdigkeit oder Adresse suchen</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Nach Reiseziel suchen…</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Nach Abflugort suchen…</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">Nach %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">Von %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">Unbekannt</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Nur Sie</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Geben Sie unten Ihre Reisedaten ein.</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Hinflug und eine Übernachtung.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Hin- und Rückflug und %s Übernachtungen.</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Reisebeginn: %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Enddatum: (optional)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Enddatum: %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">%s – vorheriger Monat</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">%s – aktueller Monat</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">%s – nächster Monat</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">Tag %1$s, %2$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">%s – im Reisezeitraum</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">%s – Reisebeginn</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">%s – Enddatum</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">%s kann nicht ausgewählt werden</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">Ergebnisse</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Sortieren &amp; Filtern</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Fertig</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">%s Hotels</item>
+        <item quantity="one">%s Hotel</item>
+        <item quantity="two">%s Hotels</item>
+        <item quantity="few">%s Hotels</item>
+        <item quantity="many">%s Hotels</item>
+        <item quantity="other">%s Hotels</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s von %2$s Hotels</item>
+        <item quantity="one">%1$s von %2$s Hotel</item>
+        <item quantity="two">%1$s von %2$s Hotels</item>
+        <item quantity="few">%1$s von %2$s Hotels</item>
+        <item quantity="many">%1$s von %2$s Hotels</item>
+        <item quantity="other">%1$s von %2$s Hotels</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">von %s Hotels</item>
+        <item quantity="one">von %s Hotel</item>
+        <item quantity="two">von %s Hotels</item>
+        <item quantity="few">von %s Hotels</item>
+        <item quantity="many">von %s Hotels</item>
+        <item quantity="other">von %s Hotels</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s Flüge</item>
+        <item quantity="one">%s Flug</item>
+        <item quantity="two">%s Flüge</item>
+        <item quantity="few">%s Flüge</item>
+        <item quantity="many">%s Flüge</item>
+        <item quantity="other">%s Flüge</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Reise nach</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flüge nach %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Hotels in %1$s</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Sortieren nach</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Filter</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Gegend</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Andere Gegenden</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">Beliebtheit</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">Preis</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">Beurteilung</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">Entfernung</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Damit können Sie nach den beliebtesten Hotels sortieren.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Damit können Sie nach den günstigsten Hotels sortieren.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Damit können Sie nach am besten beurteilten Hotels sortieren.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Damit können Sie nach den nächstgelegenen Hotels sortieren.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">Ab %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Flugpräferenzen</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Zwischenstopps</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Fluglinien</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">Hallo &lt;b&gt;%1$s&lt;/b&gt;, wir haben Ihr Expedia-Konto gefunden! Bitte geben Sie unten Ihr Expedia-Passwort ein, um Ihre Facebook- und Expedia-Konten zu verknüpfen.</string>
