--- a/project/res/values-es/strings.xml
+++ b/project/res/values-es/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Buscar por destino, punto de interés o dirección</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Buscar un destino</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Buscar un origen</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">A %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">Desde %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">Desconocido</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Solo yo</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Indica las fechas de viaje</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Vuelo de ida y estancia de una noche.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Vuelo de ida y vuelta y estancia de %s noches.</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Fecha de inicio: %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Fecha de finalización: (Opcional)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Fecha de finalización: %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">%s mes anterior</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">%s mes actual</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">%s mes siguiente</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">%2$s, día %1$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">%s en el viaje</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">%s fecha de inicio</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">%s fecha de finalización</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">%s, no seleccionable</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">Resultados</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Ordenar y filtrar</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Completado</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">%s hoteles</item>
+        <item quantity="one">%s hotel</item>
+        <item quantity="two">%s hoteles</item>
+        <item quantity="few">%s hoteles</item>
+        <item quantity="many">%s hoteles</item>
+        <item quantity="other">%s hoteles</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s hoteles de %2$s</item>
+        <item quantity="one">%1$s hotel de %2$s</item>
+        <item quantity="two">%1$s hoteles de %2$s</item>
+        <item quantity="few">%1$s hoteles de %2$s</item>
+        <item quantity="many">%1$s hoteles de %2$s</item>
+        <item quantity="other">%1$s hoteles de %2$s</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">de %s hoteles</item>
+        <item quantity="one">de %s hotel</item>
+        <item quantity="two">de %s hoteles</item>
+        <item quantity="few">de %s hoteles</item>
+        <item quantity="many">de %s hoteles</item>
+        <item quantity="other">de %s hoteles</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s vuelos</item>
+        <item quantity="one">%s vuelo</item>
+        <item quantity="two">%s vuelos</item>
+        <item quantity="few">%s vuelos</item>
+        <item quantity="many">%s vuelos</item>
+        <item quantity="other">%s vuelos</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Viaje a</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Vuelos a %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Hoteles en %1$s</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Ordenar por</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Filtros</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Zonas</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Otras zonas</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">Popularidad</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">Precio</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">Valoración</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">Distancia</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Pulsa para ordenar los resultados por popularidad.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Pulsa para ordenar los resultados por precio.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Pulsa para ordenar los resultados por valoración.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Pulsa para ordenar los resultados por distancia.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">Desde %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Preferencias de vuelo</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Escalas</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Aerolíneas</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">¡Hola, &lt;b&gt;%1$s&lt;/b&gt;! Hemos encontrado tu cuenta de Expedia. Introduce tu contraseña de Expedia para enlazar tu cuenta de Facebook a tu cuenta de Expedia.</string>
