--- a/project/res/values-fr/strings.xml
+++ b/project/res/values-fr/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Recherche des destinations, sites et adresses</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Recherche des destinations…</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Recherche des origines…</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">À destination de %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">À partir de %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">le grand inconnu</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Rien que vous</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Saisissez vos dates de voyage ci-dessous.</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Vols aller-simple et séjours d\&apos;une nuit.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Vols aller-retour et séjours de %s nuits.</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Date de début : %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Date de fin : (optionnelle)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Date de fin : %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">%s mois précédent</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">%s mois en cours</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">%s mois suivant</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">Jour %1$s, %2$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">%s en voyage</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">%s date de début</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">%s date de fin</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">%s non sélectionnable</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">résultats</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Trier &amp; filtrer</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Terminé</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">%s hôtels</item>
+        <item quantity="one">%s hôtel</item>
+        <item quantity="two">%s hôtels</item>
+        <item quantity="few">%s hôtels</item>
+        <item quantity="many">%s hôtels</item>
+        <item quantity="other">%s hôtels</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s de %2$s hôtels</item>
+        <item quantity="one">%1$s de %2$s hôtel</item>
+        <item quantity="two">%1$s de %2$s hôtels</item>
+        <item quantity="few">%1$s de %2$s hôtels</item>
+        <item quantity="many">%1$s de %2$s hôtels</item>
+        <item quantity="other">%1$s de %2$s hôtels</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">de %s hôtels</item>
+        <item quantity="one">de %s hôtel</item>
+        <item quantity="two">de %s hôtels</item>
+        <item quantity="few">de %s hôtels</item>
+        <item quantity="many">de %s hôtels</item>
+        <item quantity="other">de %s hôtels</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s vols</item>
+        <item quantity="one">%s vol</item>
+        <item quantity="two">%s vols</item>
+        <item quantity="few">%s vols</item>
+        <item quantity="many">%s vols</item>
+        <item quantity="other">%s vols</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Voyage à</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Vols à destination de %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s hôtels</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Trier par</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Filtres</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Quartiers</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Autres quartiers</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">popularité</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">prix</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">note clients</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">proximité</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Appuyez pour trier en fonction des hôtels les plus populaires.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Appuyez pour trier en fonction des hôtels les moins chers.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Appuyez pour trier en fonction des hôtels les mieux notés.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Appuyez pour trier en fonction des hôtels les plus proches.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">À partir de %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Préférences de vol</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Escales</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Compagnies aériennes</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">&lt;b&gt;%1$s&lt;/b&gt;, nous avons trouvé votre compte Expedia ! Veuillez saisir votre mot de passe Expedia ci-dessous afin de lier vos comptes Facebook et Expedia.</string>
