--- a/project/res/values-ms/strings.xml
+++ b/project/res/values-ms/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Cari destinasi, mercu tanda dan alamat</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Cari destinasi…</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Cari tempat asal…</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">Ke %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">Dari %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">Tempat Hebat Yang Tidak Diketahui</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Hanya Anda</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Masukkan tarikh perjalanan anda di bawah.</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Penerbangan sehala dan penginapan semalam.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Penerbangan pergi-balik dan penginapan %s malam.</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Tarikh Mula: %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Tarikh Akhir: (Opsyenal)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Tarikh Akhir: %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">%s bulan sebelumnya</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">%s bulan semasa</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">%s bulan hadapan</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">Hari %1$s, %2$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">%s dalam perjalanan</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">%s tarikh mula</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">%s tarikh akhir</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">%s tidak boleh dipilih</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">Hasil</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Isih &amp; Tapis</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Selesai</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">%s Hotel</item>
+        <item quantity="one">%s Hotel</item>
+        <item quantity="two">%s Hotel</item>
+        <item quantity="few">%s Hotel</item>
+        <item quantity="many">%s Hotel</item>
+        <item quantity="other">%s Hotel</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s daripada %2$s Hotel</item>
+        <item quantity="one">%1$s daripada %2$s Hotel</item>
+        <item quantity="two">%1$s daripada %2$s Hotel</item>
+        <item quantity="few">%1$s daripada %2$s Hotel</item>
+        <item quantity="many">%1$s daripada %2$s Hotel</item>
+        <item quantity="other">%1$s daripada %2$s Hotel</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">daripada %s hotel</item>
+        <item quantity="one">daripada %s hotel</item>
+        <item quantity="two">daripada %s hotel</item>
+        <item quantity="few">daripada %s hotel</item>
+        <item quantity="many">daripada %s hotel</item>
+        <item quantity="other">daripada %s hotel</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s Penerbangan</item>
+        <item quantity="one">%s Penerbangan</item>
+        <item quantity="two">%s Penerbangan</item>
+        <item quantity="few">%s Penerbangan</item>
+        <item quantity="many">%s Penerbangan</item>
+        <item quantity="other">%s Penerbangan</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Perjalanan Ke</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Penerbangan ke %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s Hotel</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Isih Mengikut</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Penapis</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Kawasan</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Kawasan Lain</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">popular</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">harga</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">penarafan</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">jarak</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Tekan untuk mengisih mengikut hotel paling popular.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Tekan untuk mengisih mengikut hotel paling kurang mahal.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Tekan untuk mengisih mengikut hotel paling tinggi ditarafkan.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Tekan untuk mengisih mengikut hotel paling dekat.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">Dari %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Keutamaan Penerbangan</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Hentian</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Syarikat penerbangan</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">Hai &lt;b&gt;%1$s&lt;/b&gt;, nampaknya kami berjaya menemui akaun Expedia anda! Sila masukkan kata laluan expedia anda di bawah untuk memautkan akaun facebook dan expedia anda.</string>
