--- a/project/res/values-nl/strings.xml
+++ b/project/res/values-nl/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Zoek naar bestemmingen, bezienswaardigheden of adressen</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Zoek naar bestemmingen …</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Zoek naar vertrekplaatsen …</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">Naar %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">Vanaf %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">Een groot mysterie</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Alleen jij</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Voer hieronder je reisdatums in.</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Enkele vluchten en verblijven van 1 nacht.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Enkele vluchten en verblijven van %s nacht(en).</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Startdatum: %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Einddatum: (optioneel)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Einddatum: %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">Vorige maand - %s</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">Huidige maand - %s</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">Volgende maand - %s</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">Dag %1$s, %2$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">Op reis - %s</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">Startdatum - %s</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">Einddatum - %s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">Niet selecteerbaar - %s</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">Resultaten</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Sorteer &amp; Filter</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Gereed</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">%s hotels</item>
+        <item quantity="one">%s hotel</item>
+        <item quantity="two">%s hotels</item>
+        <item quantity="few">%s hotels</item>
+        <item quantity="many">%s hotels</item>
+        <item quantity="other">%s hotels</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s van %2$s hotels</item>
+        <item quantity="one">%1$s van %2$s hotel</item>
+        <item quantity="two">%1$s van %2$s hotels</item>
+        <item quantity="few">%1$s van %2$s hotels</item>
+        <item quantity="many">%1$s van %2$s hotels</item>
+        <item quantity="other">%1$s van %2$s hotels</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">van %s hotels</item>
+        <item quantity="one">van %s hotel</item>
+        <item quantity="two">van %s hotels</item>
+        <item quantity="few">van %s hotels</item>
+        <item quantity="many">van %s hotels</item>
+        <item quantity="other">van %s hotels</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s vluchten</item>
+        <item quantity="one">%s vlucht</item>
+        <item quantity="two">%s vluchten</item>
+        <item quantity="few">%s vluchten</item>
+        <item quantity="many">%s vluchten</item>
+        <item quantity="other">%s vluchten</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Reis naar</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Vluchten naar %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s hotels</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Sorteer op</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Filters</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Buurten</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Andere buurten</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">populair</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">prijs</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">score</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">afstand</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Druk om te sorteren op de populairste hotels.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Druk om te sorteren op de goedkoopste hotels.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Druk om te sorteren op de hotels met de beste gastenscores.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Druk om te sorteren op de dichtstbijzijnde hotels.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">Vanaf %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Vluchtvoorkeuren</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Tussenstops</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Airlines</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">Beste &lt;b&gt;%1$s&lt;/b&gt;, we hebben je Expedia-account gevonden! Voer hieronder het wachtwoord van je Expedia-account in om het met je Facebook-account te kunnen koppelen.</string>
