--- a/project/res/values-vi-rVN/strings.xml
+++ b/project/res/values-vi-rVN/strings.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Tablet search strings -->
+    <!-- Hint asking users to search for anything -->
+    <string name="search_all_hint">Tìm điểm đến, danh thắng và địa chỉ</string>
+    <!-- Hint in edit text that the user should type in a destination (location) -->
+    <string name="destinations_hint">Tìm điểm đến…</string>
+    <!-- Hint in edit text that the user should type in an origin (location) -->
+    <string name="origins_hint">Tìm điểm khởi đầu…</string>
+    <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
+    <string name="to_TEMPLATE">Đến %s</string>
+    <!-- From an origin.  %s is an origin name, e.g. "From San Francisco" -->
+    <string name="from_TEMPLATE">Từ %s</string>
+    <!-- String when we don't know where the user is coming from/going to -->
+    <string name="great_unknown">Không biết</string>
+    <!-- When a search is for one adult, we assume it's you! -->
+    <string name="just_you">Chỉ mình quý vị</string>
+    <!-- Shown when no search dates are selected -->
+    <string name="dates_status_none">Nhập ngày đi dưới đây.</string>
+    <!-- Shown when a single date is selected for searching -->
+    <string name="dates_status_one">Chuyến bay 1 chiều và 1 đêm khách sạn.</string>
+    <!-- Shown when round trip dates are selected for searching -->
+    <string name="dates_status_multi_TEMPLATE">Chuyến bay khứ hồi và %s đêm khách sạn.</string>
+    <!-- Start date display.  %s is the start date, e.g. "Start Date: September 10" -->
+    <string name="start_date_TEMPLATE">Ngày bắt đầu: %s</string>
+    <!-- End date display, when there is no end date selected yet.  We indicate it is not necessary to provide. -->
+    <string name="end_date_optional">Ngày kết thúc: (Không bắt buộc)</string>
+    <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
+    <string name="end_date_TEMPLATE">Ngày kết thúc: %s</string>
+
+    <!-- Calendar picker strings -->
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
+    <string name="cd_month_previous_TEMPLATE">%s tháng trước</string>
+    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
+    <string name="cd_month_current_TEMPLATE">%s tháng này</string>
+    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
+    <string name="cd_month_next_TEMPLATE">%s tháng tiếp theo</string>
+    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
+    <string name="cd_day_of_week_TEMPLATE">Ngày %1$s, %2$s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
+    <string name="cd_day_selected_TEMPLATE">Ngày trong chuyến đi: %s</string>
+    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
+    <string name="cd_day_selected_start_TEMPLATE">Ngày bắt đầu: %s</string>
+    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
+    <string name="cd_day_selected_end_TEMPLATE">Ngày kết thúc: %s</string>
+    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
+    <string name="cd_day_invalid_TEMPLATE">Không thể chọn ngày: %s</string>
+
+    <!-- Tablet Results strings -->
+    <!-- Resulsts label -->
+    <string name="results">Kết quả</string>
+    <!-- Sort & Filter label -->
+    <string name="Sort_and_Filter">Sắp xếp &amp; Lọc</string>
+    <!-- "Done" list header label -->
+    <string name="Done">Hoàn tất</string>
+    <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
+    <plurals name="x_Hotels_TEMPLATE">
+        <item quantity="zero">%s Khách\nsạn</item>
+        <item quantity="one">%s Khách\nsạn</item>
+        <item quantity="two">%s Khách\nsạn</item>
+        <item quantity="few">%s Khách\nsạn</item>
+        <item quantity="many">%s Khách\nsạn</item>
+        <item quantity="other">%s Khách\nsạn</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search TEMPLATE e.g. "15 of 25 Hotels" -->
+    <plurals name="x_of_y_Hotels_TEMPLATE">
+        <item quantity="zero">%1$s/%2$s Khách\nsạn</item>
+        <item quantity="one">%1$s/%2$s Khách\nsạn</item>
+        <item quantity="two">%1$s/%2$s Khách\nsạn</item>
+        <item quantity="few">%1$s/%2$s Khách\nsạn</item>
+        <item quantity="many">%1$s/%2$s Khách\nsạn</item>
+        <item quantity="other">%1$s/%2$s Khách\nsạn</item>
+    </plurals>
+    <!-- Pluralization for a filtered number of hotels returned from a search, lacking the actual filtered count e.g. "of 25 hotels" -->
+    <plurals name="of_y_hotels_TEMPLATE">
+        <item quantity="zero">/%s Khách\nsạn</item>
+        <item quantity="one">/%s Khách\nsạn</item>
+        <item quantity="two">/%s Khách\nsạn</item>
+        <item quantity="few">/%s Khách\nsạn</item>
+        <item quantity="many">/%s Khách\nsạn</item>
+        <item quantity="other">/%s Khách\nsạn</item>
+    </plurals>
+    <!-- Pluralization for Number of Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Flights_TEMPLATE">
+        <item quantity="zero">%s Chuyến\nabay</item>
+        <item quantity="one">%s Chuyến\nabay</item>
+        <item quantity="two">%s Chuyến\nabay</item>
+        <item quantity="few">%s Chuyến\nabay</item>
+        <item quantity="many">%s Chuyến\nabay</item>
+        <item quantity="other">%s Chuyến\nabay</item>
+    </plurals>
+    <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
+    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
+    <!-- Trip To -->
+    <string name="trip_to">Chuyến đi đến</string>
+    <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
+    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Chuyến bay đến %1$s</string>
+    <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
+    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Khách sạn ở %1$s</string>
+    <!-- Label for VIP badge -->
+    <string name="VIP">VIP</string>
+
+    <!-- Tablet hotel filters -->
+    <!-- "Sort By" section header -->
+    <string name="Sort_By">Sắp xếp theo</string>
+    <!-- "Filters" section header -->
+    <string name="Filters">Lọc</string>
+    <!-- "Areas"/neighborhoods section header -->
+    <string name="Areas">Khu vực</string>
+    <!-- Default label for unnamed areas/neighborhoods -->
+    <string name="Other_Areas">Khu vực khác</string>
+    <!-- Short label for "sort by popular" button -->
+    <string name="popular">mức độ phổ biến</string>
+    <!-- Short label for "sort by price" button -->
+    <string name="price">giá</string>
+    <!-- Short label for "sort by rating" button -->
+    <string name="rating">xếp hạng</string>
+    <!-- Short label for "sort by distance" button -->
+    <string name="distance">khoảng cách</string>
+    <!-- Content description for "sort by popular" button -->
+    <string name="cd_sort_by_popular">Bấm để sắp xếp theo mức độ phổ biến của khách sạn.</string>
+    <!-- Content description for "sort by price" button -->
+    <string name="cd_sort_by_price">Bấm để sắp xếp theo thứ tự từ khách sạn giá thấp nhất.</string>
+    <!-- Content description for "sort by rating" button -->
+    <string name="cd_sort_by_rating">Bấm để sắp xếp theo điểm xếp hạng cao nhất của khách sạn.</string>
+    <!-- Content description for "sort by distance" button -->
+    <string name="cd_sort_by_distance">Bấm để sắp xếp theo khách sạn gần nhất.</string>
+    <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
+    <string name="From_x_TEMPLATE">Từ %s</string>
+
+    <!-- Tablet flight sort/filter controls -->
+    <!-- Flight sort and filter page header -->
+    <string name="flight_preferences">Tùy chọn chuyến bay</string>
+    <!-- Header for a flight filter based upon number of stops -->
+    <string name="stops">Điểm dừng</string>
+    <!-- Header for a flight filter, showing a list of flights from different airlines -->
+    <string name="airlines">Hãng h.không</string>
+
     <!-- Facebook -->
     <!-- Weve found your user account -->
     <string name="facebook_weve_found_your_account">Chào &lt;b&gt;%1$s&lt;/b&gt;, có vẻ chúng tôi đã tìm được tài khoản Expedia của quý vị! Vui lòng nhập mật khẩu Expedia vào dưới đây để kết nối tài khoản Facebook và Expedia của mình.</string>
@@ -539,7 +675,7 @@
     <!-- 1: traveler name 2: hotel name 3: date(mm/dd/yyyy) 4: SharableURL -->
     <string name="share_msg_template_short_hotel_reshare">%1$s lưu trú tại %2$s vào %3$s!\n%4$s</string>
     <!-- 1: Hotel name, 2: Formatted length of stay -->
-    <string name="share_template_long_hotel_1_greeting">Xin chào,\n\nTôi nghỉ tại %1$s trong %2$s.</string>
+    <string name="share_template_long_hotel_1_greeting">Chào,\n\nTôi lưu trú tại %1$s trong vòng %2$s.</string>
     <!-- 1: Traveler name 2: Hotel name, 3: Formatted length of stay -->
     <string name="share_template_long_hotel_1_greeting_reshare">Chào,\n\n%1$s lưu trú tại %2$s trong vòng %3$s.</string>
     <!-- 1: Check in date, 2: Check out date -->
@@ -1820,7 +1956,7 @@
 
     <!-- Confirmation activity -->
     <!-- Friendly message at the top of the receipt -->
-    <string name="Enjoy_your_stay">Tận hưởng thời gian lưu trú của quý vị!</string>
+    <string name="Enjoy_your_stay">Chúc quý vị những ngày lưu trú tốt đẹp!</string>
     <!-- Format for a first/last name -->
     <string name="name_template">%1$s %2$s</string>
     <!-- Reservation summary label -->
